--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 
             <div class="section text-center" id="news">
                 <h2 div class="title">news </h2>
-                    <a href="https://note.com/team_sippo/n/n9ce887b8e774" target="_blank"  rel="noopener">
-                    <button class="btn btn-sm btn-warning">2021.09.04 : Cafe</button></a><br>
+                    <a href="https://note.com/team_sippo/n/n26520121d89a" target="_blank"  rel="noopener">
+                    <button class="btn btn-sm btn-warning">2021.09.15 : Regular meeting</button></a><br>
                     <a href="./news.html"><button class="btn btn-primary btn-link">view more...</button></a>
                 </div>
             </div>
