--- a/news.html
+++ b/news.html
@@ -62,11 +62,11 @@
          <div class="container">
           <div class="section text-center" id="news">
             <h2 div class="title">news </h2>
-                <button class="btn btn-warning " href="update"><i class="fa fa-coffee"></i> 2021.09.15</button>
+                <button class="btn btn-warning " href="update"><i class="fa fa-sticky-note"></i> 2021.09.22</button>
                 <div class="card-body justify-content-center">
                   <p class="card-description justify-content-center">
                     <!--iframe class="note-embed" src="https://note.com/embed/notes/n6a5164305795" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script-->
-                    <iframe class="note-embed" src="https://note.com/embed/notes/n26520121d89a" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
+                    <iframe class="note-embed" src="https://note.com/embed/notes/n4b70777d232d" style="border: 0; display: block; max-width: 99%; width: 494px; padding: 0px; margin: 10px 0px; position: static; left: 0; right: 0; margin: auto; visibility: visible;" height="400"></iframe><script async src="https://note.com/scripts/embed.js" charset="utf-8"></script>
                   </p>
                 </div>
             </div>
@@ -137,6 +137,10 @@
                 <h2 div class="title">Archives </h2>
                     <div class="card-body ">
                       <p class="card-description "> 
+                        <a href="https://note.com/hurasu1/n/n601ac4de2e29" class="btn btn-warning" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.09.22</a>
+                        <a href="https://note.com/b_b_/n/n37ecb2919c5c" class="btn btn-warning" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.09.20</a>
+                        <a href="https://note.com/team_sippo/n/nde1bb6a10c33" class="btn btn-warning" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.09.18</a>
+                        <a href="https://note.com/b_b_/n/ne83c08ef07a4" class="btn btn-warning" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.09.12</a>
                         <a href="https://note.com/team_sippo/n/n26520121d89a" class="btn btn-warning" role="button" target="_blank"  rel=”noopener”><i class="fa fa-clock-o"></i> 2021.09.15</a>
                         <a href="https://note.com/hurasu1/n/n510c773e0bb4" class="btn btn-warning" role="button" target="_blank"  rel=”noopener”><i class="fa fa-sticky-note"></i> 2021.09.12</a>
                         <a href="https://note.com/b_b_/n/ne83c08ef07a4" class="btn btn-warning" role="button" target="_blank"  rel=”noopener”><i class="fa fa-coffee"></i> 2021.09.12</a>
